grammar.txt
# SCRIPTURE GRAMMAR

<file>::= <fileItemList> END.

<fileItem>::= <scriptureRef> | not(<scriptureRef> or END)


<fileItemList>::= <fileItem> <fileItemList> | lambda.

<scriptureRef> ::= <book> <chapterRef> <chapterRefList>.

<chapterRef>::= NUMBER <chapterEnd>.
<chapterEnd>::= <chapterVerseEnd> | <chapterRangeEnd> | lambda.
<chapterVerseEnd>::= COLON <verseRef> <verseRefList>.
<chapterRangeEnd>::= DASH NUMBER.

<verseRef>::= NUMBER <verseEnd>.
<verseEnd>::= <verseRangeEnd> | lambda.
<verseRangeEnd>::= DASH NUMBER.

<chapterRefList> ::= SEMICOLON <chapterRef> <chapterRefList> | lambda.
<verseRefList>::= COMMA <verseRef> <verseRefList> | lambda.

<book>::= <bookNum> | "JS" DASH <js> | "Joseph" "Smith" <joseph> | <bookName>.

<bookNum>::=
	"1" <NN12>	|
	"2" <NN12>	|
	"3" <NN3>	|
	"4" <NN4>.

<js>::= "H" | "M".
<joseph>::= "History" | "Matthew".

<NN12>::=
	"Chr" PERIOD
	"Cor" PERIOD
	"Jn" PERIOD
	"Kgs" PERIOD
	"Ne" PERIOD
	"Pet" PERIOD
	"Sam" PERIOD
	"Thes" PERIOD
	"Tim" PERIOD
	"Chronicles"
	"Corinthians"
	"John"
	"Kings"
	Nephi
	"Peter"
	"Samuel"
	"Thessalonians"
	"Timothy".

<NN3>::=
	"Jn" PERIOD     |
	"Ne" PERIOD     |
	"John"			|
	"Nephi".

<NN4>::=
	"Ne" PERIOD		|
	"Nephi".

<bookName>::=
	"Abraham"    |
	"Acts"    |
	"Alma"    |
	"Amos"    |
	"Colossians"    |
	"Daniel"    |
	"Deuteronomy"    |
	"Ecclesiastes"    |
	"Enos"    |
	"Ephesians"    |
	"Esther"    |
	"Ether"    |
	"Exodus"    |
	"Ezekiel"    |
	"Ezra"    |
	"Galatians"    |
	"Genesis"    |
	"Habakkuk"    |
	"Haggai"    |
	"Hebrews"    |
	"Helaman"    |
	"Hosea"    |
	"Isaiah"    |
	"Jacob"    |
	"James"    |
	"Jarom"    |
	"Jeremiah"    |
	"Job"    |
	"Joel"    |
	"John"    |
	"Jonah"    |
	"Joshua"    |
	"Jude"    |
	"Judges"    |
	"Lamentations"    |
	"Leviticus"    |
	"Luke"    |
	"Malachi"    |
	"Mark"    |
	"Matthew"    |
	"Micah"    |
	"Mormon"    |
	"Moroni"    |
	"Moses"    |
	"Mosiah"    |
	"Nahum"    |
	"Nehemiah"    |
	"Numbers"    |
	"Obadiah"    |
	"OD"    |
	"Omni"    |
	"Philemon"    |
	"Philippians"    |
	"Proverbs"    |
	"Psalms"    |
	"Revelation"    |
	"Romans"    |
	"Ruth"    |
	"Song"    |
	"Titus"    |
	"Zechariah"    |
	"Zephaniah"    |
	"Abr" PERIOD    |
	"Col" PERIOD    |
	"Dan" PERIOD    |
	"Deut" PERIOD    |
	"Eccl" PERIOD    |
	"Eph" PERIOD    |
	"Esth" PERIOD    |
	"Ex" PERIOD    |
	"Ezek" PERIOD    |
	"Gal" PERIOD    |
	"Gen" PERIOD    |
	"Hab" PERIOD    |
	"Hag" PERIOD    |
	"Heb" PERIOD    |
	"Hel" PERIOD    |
	"Isa" PERIOD    |
	"Jer" PERIOD    |
	"Josh" PERIOD    |
	"Judg" PERIOD    |
	"Lam" PERIOD    |
	"Lev" PERIOD    |
	"Mal" PERIOD    |
	"Matt" PERIOD    |
	"Morm" PERIOD    |
	"Moro" PERIOD    |
	"Neh" PERIOD    |
	"Num" PERIOD    |
	"Obad" PERIOD    |
	"Philem" PERIOD    |
	"Philip" PERIOD    |
	"Prov" PERIOD    |
	"Ps" PERIOD    |
	"Rev" PERIOD    |
	"Rom" PERIOD    |
	"Zech" PERIOD    |
	"Zeph" PERIOD    |
	"Articles" "of" "Faith"    |
	"A" "of" "F"    |
	"Doctrine" "and" "Covenants"    |
	"Official" "Declaration"    |
	"Song" "of" "Solomon"    |
	"Words" "of" "Mormon"    |
	"W" "of" "M"	|
	"D" AMPERSAND "C".
